--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
   }
 
   .grid-item {
-    background: #101010; /* Gradient background */
+    background: #3c3c3c; /* Gradient background */
     border-radius: 5px;
 	max-width: 400px;
     padding: 10px; /* Add padding for spacing */
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Shadow effect */
     display: flex;
-    align-items: left;
+    align-items: center;
     justify-content: space-between;
     flex-direction: column; /* Stack content vertically */
     text-align: left; /* Center text */
@@ -107,6 +107,11 @@
   <div class="grid-item">
     <div class="icon" style="background-image: url('https://bafkreigf46skvaabhbjvepghvrtn5gskikae7rggl2lwlsp3tdofrslcua.ipfs.nftstorage.link/')"></div>
     <a href="https://nftfan.github.io/GRAPH/">Results Analysis</a>
+    <div class="additional-icon"></div>
+  </div>
+  <div class="grid-item">
+    <div class="icon" style="background-image: url('https://bafkreiddsylwv7hekjahljxippdidihepcwgs2aayjy7o7bzltnqxgzou4.ipfs.nftstorage.link/')"></div>
+    <a href="https://nftfan.github.io/lf01/">Promo Page</a>
     <div class="additional-icon"></div>
   </div>
   
